@@ -1,5 +1,7 @@
 SCRIPTS = \
 	postgis_restore.pl \
+	create_undef.pl \
+	postgis_proc_upgrade.pl \
 	profile_intersects.pl \
 	test_estimation.pl \
 	test_joinestimation.pl
