@@ -8,6 +8,7 @@ PostGIS 1.1.0CVS
 	  + Autoprobing DriverWrapper for HexWKB / EWKT switching
 	- full autoconf-based configuration
 	- added scale() and transscale() companion methods to translate()
+	- initial implementation of postgis_proc_upgrade script
 
 PostGIS 1.0.1
 2005/05/24
